--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name=".SpeakersList"
             android:label="@string/speakers_list">
-            <intent-filter>
+            <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -29,6 +29,3 @@
 
 
 </manifest>
-
-
-<!--RENDRE SPEAKER_LIST MAIN ACTIVITY-->
