--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,8 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".SpeakersList"
-            android:label="@string/speakers_list">
-            <intent-filter android:label="@string/app_name">
+            android:name=".SpeakersList">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
