Code-Refactor for simple use of record features.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.duret.testalize">
 
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:icon="@mipmap/ic_launcher"
@@ -13,16 +11,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity
-            android:name=".SpeakersList">
+        <activity android:name=".SpeakersListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".BaseActivity" />
-        <activity android:name=".EditSpeakerModel" android:label="@string/edit_speaker_model"/>
-        <activity android:name=".Verification" android:label="@string/verification"/>
+        <activity android:name=".EditSpeakerModelActivity" android:label="@string/edit_speaker_model"/>
+        <activity android:name=".VerificationActivity" android:label="@string/verification"/>
 
     </application>
 
