--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".EditSpeakerModelActivity" android:label="@string/edit_speaker_model"/>
         <activity android:name=".VerificationActivity" android:label="@string/verification"/>
         <activity android:name=".RecordActivity" />
+        <activity android:name=".SettingsActivity" />
 
     </application>
 
